# weather_cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LATEST_CHANGE.md  README.md  justfile
.github/workflows/: codeql.yml  pr-review.yml  test.yml
src/: cache.rs  connectors.rs  depictors.rs  main.rs  response_layouts.rs
